hermes/vendor/ui_test/examples_tests/rustc_basic/foomp-rustfix.rs
#![deny(warnings)]

fn main() {
    let mut x = 42;
    //~^ ERROR: does not need to be mutable
    println!("{x}");
}
